@@ -1,4 +1,8 @@
 
+                CHANGES IN party VERSION 0.9-9997 (2010-07-06)
+
+    o    update mvt.f (see mvtnorm)
+
 
                 CHANGES IN party VERSION 0.9-9996 (2010-06-24)
 
